Fixed table being illegible at larger resolutions

--- a/docs/style.css
+++ b/docs/style.css
@@ -77,6 +77,9 @@ tr:nth-child(even){background-color: rgba(242,242,242,1);}
 	h2 {
 		font-size: 40px;
 	}
+	table *{
+		font-size: 19px;
+	}
 }
 body {
 	margin: 0px;
